# ddns-server

./: Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yaml
src/: main.rs
